--- a/plugin.html
+++ b/plugin.html
@@ -1,5 +1,14 @@
+<script>
+function myFunction() {
+    alert("Hello World!");
+    console.log("Also hello world!");
+}
+</script>
+
 <div style="max-width: fit-content; margin: 0 auto; position: relative;">
-	  <h1 class="smartphone-text" style="color: red; font-family: 'Lato'; width: 100%;height: 100%; box-sizing: border-box; padding-top: 25px; padding-right: 12px; padding-left: 12px; padding-bottom: 25px;">
+	  <h1 class="smartphone-text" style="color: red; font-family: 'Lato'; box-sizing: border-box; padding-top: 25px; padding-right: 12px; padding-left: 12px; padding-bottom: 25px;">
         Welcome, Carla!!
       </h1>
-  </div>
+<button onclick="myFunction()">Click me</button>
+<button onclick="alert('Hello World!');">Click me 2</button>
+</div>
